First public commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+# Blocked directories
+analysis/*
+
+*~
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
-*.so
+*.pyc
 
 # Distribution / packaging
 .Python
